--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,18 @@
 nav {
-    background-color: #f0f0f0;
     padding: 5px;
 }
 
 nav ul {
     list-style-type: none;
-    display: flex;
+    display: inline-block;
     justify-content: center;
+    padding: 0;
+    margin: 0;
 }
 
 nav li {
-    margin-right: 10px;
+    display: inline;
+    margin: 0 20px;
 }
 
 nav a {
@@ -18,35 +20,43 @@ nav a {
     color: white;
 }
 
-.text-center {
-    text-align: center
+.nav-image {
+    width: 50px;
+    vertical-align: middle;
 }
 
-.leaderboard-container {
-    background-color: #f0f0f0; /* Background color of the rounded rectangle */
-    border-radius: 10px; /* Adjust the value to control roundness */
-    padding: 20px; /* Add padding for spacing */
-    text-align: center; /* Center text horizontally */
-    max-width: 400px;
+body, html {
+    background-color: #e2ebdd;
+    font-family: 'Fira Sans', sans-serif;
+}
+
+.blurb-container {
+    max-width: 800px;
     margin: 0 auto;
 }
 
-/* Styling for the leaderboard title */
-.leaderboard-container h2 {
-    margin-bottom: 20px; /* Add space between the title and cards */
+.text-center {
+    text-align: center;
 }
 
-/* Styling for the cards container */
-.leaderboard-cards-container {
-    max-width: 400px; /* Set a maximum width for the cards container */
-    margin: 0 auto; /* Center the container horizontally */
+.leaderboard {
+    text-align: center;
+    width: 100%;
 }
 
-/* Styling for the leaderboard cards */
-.leaderboard-card {
-    background-color: #ffffff; /* Card background color */
-    padding: 10px; /* Add padding for card content */
-    border-radius: 10px; /* Same roundness as the container */
-    margin-bottom: 10px; /* Add space between cards */
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2); /* Optional box shadow for depth */
+.leaderboard-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: inline-block; /* Aligns the list in the center of its parent */
+    background-color: #f5f5f5; /* Light gray background */
+    border-radius: 10px; /* Rounded corners */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: adds a subtle shadow */
+}
+
+.leaderboard-list-entry {
+    background-color: #ddd; /* Gray background */
+    margin: 5px;
+    padding: 10px;
+    border-radius: 5px; /* Rounded corners for list items */
 }
