--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,6 @@
 nav {
     padding: 5px;
+    background-color: #9ebe92;
 }
 
 nav ul {
@@ -13,11 +14,13 @@ nav ul {
 nav li {
     display: inline;
     margin: 0 20px;
+    font-size: 20px;
+    font-weight: bold;
 }
 
 nav a {
     text-decoration: none;
-    color: white;
+    color: black;
 }
 
 .nav-image {
@@ -28,10 +31,12 @@ nav a {
 body, html {
     background-color: #e2ebdd;
     font-family: 'Fira Sans', sans-serif;
+    margin: 0;
+    padding: 0;
 }
 
 .blurb-container {
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
 }
 
@@ -40,8 +45,9 @@ body, html {
 }
 
 .leaderboard {
-    text-align: center;
     width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 .leaderboard-list {
@@ -49,14 +55,27 @@ body, html {
     padding: 0;
     margin: 0;
     display: inline-block; /* Aligns the list in the center of its parent */
-    background-color: #f5f5f5; /* Light gray background */
-    border-radius: 10px; /* Rounded corners */
-    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Optional: adds a subtle shadow */
+    border-radius: 2px; /* Rounded corners */
 }
 
 .leaderboard-list-entry {
-    background-color: #ddd; /* Gray background */
-    margin: 5px;
-    padding: 10px;
+    background-color: #eaeaea; /* Gray background */
+    margin: 5px 0; /* Adds margin to top and bottom */
+    padding: 20px 20px; /* Padding inside the list items */
     border-radius: 5px; /* Rounded corners for list items */
+    display: flex; /* Makes it a flex container */
+    justify-content: space-between; /* Spaces children with max space in-between */
+    align-items: center; /* Aligns children vertically in the center */
+}
+
+.rank-name {
+    text-align: left;
+    padding-right: 100px;
+    font-size: 25px;
+}
+
+.score {
+    text-align: right; /* Aligns score to the right */
+    padding-left: 20px;
+    font-size: 22px;
 }
