--- a/css/leaderboard.css
+++ b/css/leaderboard.css
@@ -82,4 +82,8 @@ body {
     font-size: 25px;
 }
 
-.score 
+.score {
+    text-align: right; /* Aligns score to the right */
+    padding-left: 20px;
+    font-size: 22px;
+}
