--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,7 @@
 nav {
     padding: 5px;
     background-color: #9ebe92;
+    text-align: center;
 }
 
 nav ul {
@@ -48,28 +49,23 @@ body {
     padding: 0;
 }
 
-.text-center {
-    text-align: center;
+.heading {
+    text-align: center
 }
 
-/* Style the table */
-.leaderboard-table {
-    width: 75%; /* Adjust the width as needed */
-    border-collapse: collapse; /* Collapse borders so there's no space between them */
-    margin: 20px auto; /* Center the table in the section */
-    background-color: #dae3d7; /* Light green background for the table */
+.subheading, .subtext {
+    text-align: left;
+    padding-left: 10%;
 }
 
-/* Style the table header */
-.leaderboard-table th {
-    border: 1px solid #aba3a3; /* Light grey border */
-    padding: 10px;
-    text-align: left; /* Align header text to the left */
+.subtext {
+    max-width: 80%;
+    font-size: 20px;
 }
 
-/* Style the table data cells */
-.leaderboard-table td {
-    border: 1px solid #aba3a3; /* Light grey border */
-    padding: 10px;
-    text-align: left; /* Align cell text to the left */
+ul {
+    text-align: left;
+    padding-left: 13%;
+    max-width: 80%;
+    font-size: 20px;
 }
