--- a/css/about.css
+++ b/css/about.css
@@ -1,7 +1,7 @@
 nav {
     padding: 5px;
-    background-color: #9ebe92;
-    text-align: center;
+    padding-top: 20px;
+    padding-left: 50px;
 }
 
 nav ul {
@@ -14,14 +14,20 @@ nav ul {
 
 nav li {
     display: inline;
-    margin: 0 20px;
+    margin: 15px;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 100;
 }
 
 nav a {
     text-decoration: none;
     color: black;
+}
+
+nav ul li {
+    font-size : 18px;
+    font-family: 'Raleway', sans-serif;
+    font-weight : 600;
 }
 
 nav ul li a {
@@ -44,7 +50,7 @@ nav ul li a:hover {
 
 body {
     background-color: #e2ebdd;
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Raleway', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -57,12 +63,14 @@ body {
 .subheading, .subtext {
     text-align: left;
     padding-left: 10%;
+    font-weight: normal;
 }
 
 .subtext {
     max-width: 80%;
     font-size: 20px;
     padding-bottom: 20px;
+    font-weight: normal;
 }
 
 ul {
@@ -71,4 +79,14 @@ ul {
     padding-bottom: 20px;
     max-width: 80%;
     font-size: 20px;
+}
+h1 {
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800; /* Assuming you want the heaviest weight for Raleway */
+}
+.subheading {
+
+    font-family: 'Raleway', sans-serif;
+    font-weight: 800; /* Assuming you want the heaviest weight for Raleway */
 }
